--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "helmet": "^3.12.0",
+    "lodash": "^4.17.10",
     "morgan": "^1.9.0",
+    "mysql": "^2.15.0",
     "mysql2": "^1.5.3",
     "sequelize": "^4.37.7"
   },
@@ -26,11 +28,10 @@
     "@types/cookie-parser": "^1.4.1",
     "@types/cors": "^2.8.4",
     "@types/express": "^4.11.1",
-    "@types/node": "^9.6.7",
+    "@types/node": "9.6.7",
     "@types/sequelize": "^4.27.17",
     "gulp": "^3.9.1",
     "nodemon": "^1.17.4",
-    "tslint": "^5.10.0",
     "typescript": "^2.8.3"
   }
 }
