--- a/src/Repository/config/config.json
+++ b/src/Repository/config/config.json
@@ -2,9 +2,12 @@
   "development": {
     "username": "root",
     "password": "root",
-    "database": "portalempregot02",
+    "database": "db_10conta_dev",
     "host": "localhost",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "define": {
+      "timestamps": false
+    }
   },
   "test": {
     "username": "root",
