--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.3",
-    "sequelize": "^4.37.7"
+    "reflect-metadata": "^0.1.12",
+    "sequelize": "^4.37.7",
+    "sequelize-typescript": "^0.6.4"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
