--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "outDir": "./build/",
         "module": "commonjs",
-        "target": "es5",
+        "target": "es6",
         "sourceMap": true,
         "strictNullChecks": true,
         "noUnusedLocals": true,
@@ -10,7 +10,10 @@
         "lib": ["es2017"],
         "allowJs": true,
         "removeComments": false,
-      
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
+        "preserveConstEnums": true,
+        "suppressImplicitAnyIndexErrors": true,
     },
     "include": [
         "./src/**/*"
