--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "ts:watch": "tsc -w"
   },
   "dependencies": {
+    "@decorators/di": "^1.0.2",
+    "@decorators/express": "^2.2.2",
     "body-parser": "^1.18.2",
     "compression": "^1.7.2",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
+    "express-promise": "^0.4.0",
     "helmet": "^3.12.0",
     "lodash": "^4.17.10",
     "morgan": "^1.9.0",
