NEW: Created examples for controller, business and repository.

--- a/src/Repository/config/config.json
+++ b/src/Repository/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": "root",
-    "database": "portalempregot02",
+    "database": "db_newa",
     "host": "localhost",
     "dialect": "mysql"
   },
