--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "express": "^4.16.3",
     "express-promise": "^0.4.0",
     "helmet": "^3.12.0",
-    "lodash": "^4.17.10",
+    "jsonwebtoken": "^8.2.1",
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.3",
@@ -33,6 +33,7 @@
     "@types/cookie-parser": "^1.4.1",
     "@types/cors": "^2.8.4",
     "@types/express": "^4.11.1",
+    "@types/jsonwebtoken": "^7.2.7",
     "@types/node": "9.6.7",
     "@types/sequelize": "^4.27.17",
     "gulp": "^3.9.1",
