--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-promise": "^0.4.0",
+    "gulp-open": "^3.0.1",
     "helmet": "^3.12.0",
     "jsonwebtoken": "^8.2.1",
     "morgan": "^1.9.0",
