--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "gulp-nodemon": "^2.2.1",
     "gulp-open": "^3.0.1",
     "gulp-typescript": "^4.0.2",
+    "gulpclass": "^0.1.2",
     "nodemon": "^1.17.4",
+    "ts-node": "^6.1.0",
     "typescript": "^2.8.3"
   }
 }
