--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-help": "^1.6.1",
     "gulp-nodemon": "^2.2.1",
     "gulp-open": "^3.0.1",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-typescript": "^4.0.2",
     "gulpclass": "^0.1.2",
     "nodemon": "^1.17.4",
